--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+
+.nav{
+	width:100%;
+	height:100px;
+	background-color:skyblue;
+	display:flex;
+	justify-content:space-around;
+	
+	
+
+	
+}
+ul{
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
+}
+li{
+	padding:20px;
+}
