--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 	background-color:skyblue;
 	display:flex;
 	justify-content:space-around;
+	font-size:25px;
 	
 	
 
@@ -18,5 +19,5 @@ ul{
 	align-items:center;
 }
 li{
-	padding:20px;
+	padding:30px;
 }
