--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,24 @@
 
 /* Your CSS Code here. */
-
-.nav{
-	width:100%;
-	height:100px;
-	background-color:skyblue;
-	display:flex;
-	justify-content:space-around;
-	font-size:25px;
-	
-	
-
-	
+a{
+	text-decoration:none;
+	color:black;
+}
+li{
+	list-style-type:none;
 }
 ul{
 	display:flex;
-	justify-content:space-between;
-	align-items:center;
+	background-color:lightseagreen;
+	padding:10px;
 }
 li{
-	padding:30px;
+	margin-inline:15px;
 }
+video{
+	width:200px;
+	height:100px;
+	display:block;
+	margin-bottom:40px;
+}
+
